<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Seek &amp; Learn</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>

    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account ? <font color="#49476E">SignUp</font></string>
    <string name="freshchat_file_provider_authority">com.example.demoapp.provider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="fragment_login_password_hint">Password</string>
    <string name="fragment_login_email_hint">Email</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">475632589533776</string>
    <string name="fb_login_protocol_scheme">fb475632589533776</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_support">Help &amp; Support </string>
    <string name="refer_your_">Refer your friends\n to earn coin</string>
    <string name="search">Search</string>
    <string name="active">Active</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="time">Time : 9:00</string>
    <string name="duration">Duration 15</string>
    <string name="no_of_questions_25">No. of Questions : 25</string>
    <string name="enroll">ENROLL</string>
    <string name="hollyWood">HollyWood</string>
    <string name="your_balance">YOUR BALANCE</string>
    <string name="home">Home</string>
    <string name="add_more_coins">Add more coins</string>
    <string name="refer_a">Refer a friend and earn 20 coins</string>
    <string name="referral">Referral</string>
    <string name="view_faqs">View FAQs or chat with our team</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions_privacy_policy_and_more"><![CDATA[Terms & Conditions, Privacy Policy and more]]></string>
    <string name="my_coins">My Coins</string>
</resources>
