<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="175dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="110dp">
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="182dp"
                android:layout_marginTop="126dp"
                android:layout_marginEnd="181dp"
                android:layout_marginBottom="126dp" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="202dp"
                android:layout_marginTop="133dp"
                android:layout_marginEnd="147dp"
                android:layout_marginBottom="5dp"
                android:elevation="8dp"
                android:src="@drawable/edit" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewUser"
                android:layout_width="117dp"
                android:layout_height="106dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="136dp"
                android:layout_marginTop="66dp"
                android:layout_marginEnd="158dp"
                android:layout_marginBottom="3dp"
                android:elevation="5dp"
                android:src="@drawable/ic_man" />

        </RelativeLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/montserratb"
            android:layout_gravity="center"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="match_parent"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/walletCard"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:src="@drawable/wallet"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:textSize="15sp"
                        android:id="@+id/walletBalance"
                        android:layout_width="match_parent"
                        android:text="$0"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:text="My Winnings"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_marginLeft="10dp"
                    android:layout_width="0dp"
                    android:background="@drawable/coins"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:layout_height="wrap_content" />
                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/coins"
                        android:layout_width="match_parent"
                        android:text="1"
                        android:textSize="15sp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:text="My Coins"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:background="@drawable/ic_share_black_24dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:textSize="15sp"
                        android:id="@+id/referral"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/referral" />
                    <TextView
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_width="match_parent"
                        android:text="@string/refer_a"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.1"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/support"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:textSize="15sp"
                        android:id="@+id/support"
                        android:layout_width="match_parent"
                        android:text="@string/help_support"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_width="match_parent"
                        android:text="@string/view_faqs"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="5dp"
            android:layout_gravity="center"
            android:layout_height="57dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/about"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/aboutUs"
                        android:layout_width="match_parent"
                        android:text="@string/about_us"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="15sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="12sp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/terms_amp_conditions_privacy_policy_and_more"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:text=""
            android:fontFamily="@font/roboto_regular"
            android:layout_height="match_parent" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>