<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".views.Enroll.EnrollQuizActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="107dp"
                    android:background="@color/colorPrimary">
                    <TextView
                        android:id="@+id/backTextView"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:text="   Enroll"
                        android:gravity="center"
                        android:clickable="true"
                        android:textSize="16sp"
                        android:drawableLeft="@drawable/ic_chevron_left_black_24dp"
                        android:textColor="#FFFFFF"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="184dp"
                    android:layout_height="123dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="119dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="108dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/quiz_image_bg"
                    android:elevation="4dp"
                    android:padding="5dp"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <TextView
                android:id="@+id/categoryTextView"
                android:text="@string/hollyWood"
                android:fontFamily="@font/montserratb"
                style="@style/textView1"
                android:layout_marginBottom="10dp"
                android:textColor="@color/category_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_gravity="center"
                android:layout_width="90dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="#80000000"
                android:layout_height="40dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/coins2"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/coinsTextView"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:text="5"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:elevation="5dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="90dp"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">
                            <TextView
                                android:id="@+id/price"
                                android:layout_width="match_parent"
                                android:text="₹500"
                                android:fontFamily="@font/montserratb"
                                android:textColor="#CC000000"
                                android:layout_gravity="center"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:layout_height="match_parent">
                            <TextView
                                android:id="@+id/priceDesc"
                                android:layout_width="match_parent"
                                android:text=" 1st Prize"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>




                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="90dp"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">
                            <TextView
                                android:id="@+id/price2"
                                android:layout_width="match_parent"
                                android:text="₹300"
                                android:fontFamily="@font/montserratb"
                                android:textColor="#CC000000"
                                android:layout_gravity="center"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:layout_height="match_parent">
                            <TextView
                                android:id="@+id/priceDesc2"
                                android:layout_width="match_parent"
                                android:text=" 2nd Prize"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>




                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="90dp"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:layout_height="80dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="50dp">
                            <TextView
                                android:id="@+id/price3"
                                android:layout_width="match_parent"
                                android:text="₹150"
                                android:fontFamily="@font/montserratb"
                                android:textColor="#CC000000"
                                android:layout_gravity="center"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:background="@color/colorPrimary"
                            android:orientation="horizontal"
                            android:layout_height="match_parent">
                            <TextView
                                android:id="@+id/priceDesc3"
                                android:layout_width="match_parent"
                                android:text=" 3rd Prize"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:textSize="18sp"
                                android:gravity="center"
                                android:layout_height="wrap_content" />
                        </LinearLayout>




                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                app:cardCornerRadius="8dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/card_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/questions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/no_of_questions_25"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/duration"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:textSize="18sp"
                        android:text="@string/duration"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/time"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:textSize="18sp"
                        android:text="@string/time"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/description"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:layout_margin="10dp"
                        android:elevation="8dp"
                        app:cardCornerRadius="6dp"
                        android:padding="4dp"

                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/descTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_regular"
                                android:padding="10dp"
                                android:text="@string/description"
                                android:textSize="18sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/enroll"
                android:fontFamily="@font/roboto_regular"
                android:background="@drawable/enroll_button_bg"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textColor="@color/enroll"
                android:layout_height="50dp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>